# Netmon

./: .gitignore  README.md  pyproject.toml
netmon/: config.py  main.py
netmon/ai/: analyzer.py
netmon/monitor/: collector.py  logger.py
netmon/ui/: app.py  app.tcss  sorting.py  widgets.py
tests/: test_analyzer.py  test_collector.py  test_integration.py  test_logger.py  test_sorting.py  test_widgets.py
