[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netmon"
version = "0.1.0"
description = "Network monitor with AI analysis for Linux"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "psutil>=5.9",
    "textual>=0.80",
    "anthropic>=0.40",
]

[project.scripts]
netmon = "netmon.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["netmon*"]

[tool.setuptools.package-data]
netmon = ["ui/*.tcss"]
